@@ -4,8 +4,8 @@
 
 <H3>Inputs</H3>
 <UL>
-<LI><A HREF="/data/loads/go/gorefgenload/input/gene_association.paint_mgi">GAF file</A></LI>
-<LI><A HREF="/data/loads/go/gorefgenload/input/gorefgen.annot">Annotation input file</A></LI>
+<LI><A HREF="/data/loads/go/gorefgen/input/gene_association.paint_mgi">GAF file</A></LI>
+<LI><A HREF="/data/loads/go/gorefgen/input/gorefgen.annot">Annotation input file</A></LI>
 </UL>
 
 <H3>Reports</H3>
@@ -14,18 +14,18 @@
 
 <H3>Diagnostic and Load BCP Files</H3>
 <UL>
-<LI><A HREF="/data/loads/go/gorefgenload/output/">gorefgen.annot.?.diagnostics</A>
-<LI><A HREF="/data/loads/go/gorefgenload/output/">gorefgen.annot.?.error</A>
-<LI><A HREF="/data/loads/go/gorefgenload/output/gorefgen.annot.MGI_Note.bcp">gorefgen.annot.MGI_Note.bcp</A>
-<LI><A HREF="/data/loads/go/gorefgenload/output/gorefgen.annot.MGI_NoteChunk.bcp">gorefgen.annot.MGI_NoteChunk.bcp</A>
-<LI><A HREF="/data/loads/go/gorefgenload/output/gorefgen.annot.VOC_Annot.bcp">gorefgen.annot.VOC_Annot.bcp</A>
-<LI><A HREF="/data/loads/go/gorefgenload/output/gorefgen.annot.VOC_Evidence.bcp">gorefgen.annot.VOC_Evidence.bcp</A>
-<LI><A HREF="/data/loads/go/gorefgenload/output/gorefgen.annot.VOC_Evidence_Property.bcp">gorefgen.annot.VOC_Evidence_Property.bcp</A>
+<LI><A HREF="/data/loads/go/gorefgen/output/">gorefgen.annot.?.diagnostics</A>
+<LI><A HREF="/data/loads/go/gorefgen/output/">gorefgen.annot.?.error</A>
+<LI><A HREF="/data/loads/go/gorefgen/output/gorefgen.annot.MGI_Note.bcp">gorefgen.annot.MGI_Note.bcp</A>
+<LI><A HREF="/data/loads/go/gorefgen/output/gorefgen.annot.MGI_NoteChunk.bcp">gorefgen.annot.MGI_NoteChunk.bcp</A>
+<LI><A HREF="/data/loads/go/gorefgen/output/gorefgen.annot.VOC_Annot.bcp">gorefgen.annot.VOC_Annot.bcp</A>
+<LI><A HREF="/data/loads/go/gorefgen/output/gorefgen.annot.VOC_Evidence.bcp">gorefgen.annot.VOC_Evidence.bcp</A>
+<LI><A HREF="/data/loads/go/gorefgen/output/gorefgen.annot.VOC_Evidence_Property.bcp">gorefgen.annot.VOC_Evidence_Property.bcp</A>
 </UL>
 
 <H3>Archives</H3>
 <UL>
-<LI><A HREF="/data/loads/go/gorefgenload/archive/"><B>Archive</B></A> - Logs, Reports and Output files from previous loads.
+<LI><A HREF="/data/loads/go/gorefgen/archive/"><B>Archive</B></A> - Logs, Reports and Output files from previous loads.
 </UL>
 
 <H3>Wiki</H3>
